--- a/mysite_nginx.conf
+++ b/mysite_nginx.conf
@@ -2,8 +2,8 @@
 
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:///home/fedor/eLiquidInv-django/eLiquidInv/eLiquidInv.sock; # for a file socket
-    # server 127.0.0.1:8001; # for a web port socket (we'll use this first)
+    # server unix:/home/docker/code/app.sock; # for a file socket
+    server 127.0.0.1:8001; # for a web port socket (we'll use this first)
 }
 
 # configuration of the server
@@ -19,16 +19,16 @@ server {
 
     # Django media
     location /media  {
-        alias /home/fedor/eLiquidInv-django/eLiquidInv/media;  # your Django project's media files - amend as required
+        alias /home/docker/persistent/media;  # your Django project's media files - amend as required
     }
 
     location /static {
-        alias /home/fedor/eLiquidInv-django/eLiquidInv/static; # your Django project's static files - amend as required
+        alias /home/docker/volatile/static; # your Django project's static files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /home/fedor/eLiquidInv-django/eLiquidInv/uwsgi_params; # the uwsgi_params file you installed
+        include     /home/docker/code/uwsgi_params; # the uwsgi_params file you installed
     }
 }
